Closed Bug 678781 Opened 14 years ago Closed 14 years ago

warnings-as-errors - format '%p' expects type 'void*', but argument 4 has type 'JSScript*' in InvokeHelpers.cpp:880:80

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla8

People

(Reporter: philor, Assigned: philor)

Details

Attachments

(1 file)

Top of the warnings-as-errors stack for Linux64 debug, probably there but further down for the other gccs. http://tinderbox.mozilla.org/showlog.cgi?log=Mozilla-Inbound/1313260425.1313261102.1287.gz mozilla-inbound_linux64-debug_spidermonkey-warnaserrdebug on 2011/08/13 11:33:45 /usr/bin/ccache /tools/gcc-4.5/bin/g++ -o InvokeHelpers.o -c -I/builds/slave/m-in-lnx64-dbg-spidermonkey-warnaserrdebug/objdir/dist/system_wrappers_js -include ../../src/js/src/config/gcc_hidden.h -DOSTYPE=\"Linux2.6.18-53.1.14\" -DOSARCH=Linux -DEXPORT_JS_API -DIMPL_MFBT -I../../src/js/src -I. -I/builds/slave/m-in-lnx64-dbg-spidermonkey-warnaserrdebug/objdir/dist/include -I/builds/slave/m-in-lnx64-dbg-spidermonkey-warnaserrdebug/objdir/dist/include/nsprpub -I/builds/slave/m-in-lnx64-dbg-spidermonkey-warnaserrdebug/objdir/dist/include/nspr -I../../src/js/src -I../../src/js/src/assembler -I../../src/js/src/yarr -fPIC -fno-rtti -fno-exceptions -Wall -Wpointer-arith -Woverloaded-virtual -Wsynth -Wno-ctor-dtor-privacy -Wno-non-virtual-dtor -Wcast-align -Wno-invalid-offsetof -Wno-variadic-macros -Werror=return-type -pedantic -Wno-long-long -fno-strict-aliasing -pthread -pipe -DDEBUG -D_DEBUG -DTRACING -g -O3 -fstrict-aliasing -fno-stack-protector -fomit-frame-pointer -Werror -DUSE_SYSTEM_MALLOC=1 -DENABLE_ASSEMBLER=1 -DENABLE_JIT=1 -DMOZILLA_CLIENT -include ./js-confdefs.h -MD -MF .deps/InvokeHelpers.pp /builds/slave/m-in-lnx64-dbg-spidermonkey-warnaserrdebug/src/js/src/methodjit/InvokeHelpers.cpp cc1plus: warnings being treated as errors /builds/slave/m-in-lnx64-dbg-spidermonkey-warnaserrdebug/src/js/src/methodjit/InvokeHelpers.cpp: In function 'void ResetTraceHintAt(JSScript*, js::mjit::JITScript*, jsbytecode*, uint16_t, bool)': /builds/slave/m-in-lnx64-dbg-spidermonkey-warnaserrdebug/src/js/src/methodjit/InvokeHelpers.cpp:880:80: error: format '%p' expects type 'void*', but argument 4 has type 'JSScript*'
Attached patch fixSplinter Review
Conveniently, Bugzilla's duplicate detection while I was filing it told me how to fix it :)
Assignee: general → philringnalda
Status: NEW → ASSIGNED
Attachment #553018 - Flags: review?(wmccloskey)
Comment on attachment 553018 [details] [diff] [review] fix Thanks. A C-style cast might be preferable here, but I'm no expert.
Attachment #553018 - Flags: review?(wmccloskey) → review+
Turned out to be our only Linux64 warning (opt was already green, though I somehow failed to notice that and hid it), so I unhid them.
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
Target Milestone: --- → mozilla8
Whiteboard: [inbound]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: