Bug 678781 - warnings-as-errors - format '%p' expects type 'void*', but argument 4 has type 'JSScript*' in InvokeHelpers.cpp:880:80, r=billm